--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.0.2
+  dio: ^4.0.4
+  share_plus: ^3.1.0
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   flutter_test:
