--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   dio: ^4.0.4
   share_plus: ^3.1.0
   url_launcher: ^6.0.20
+  intl: ^0.17.0
+  palette_generator: ^0.3.3
 
 dev_dependencies:
   flutter_test:
