--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,11 @@ dependencies:
   share_plus: ^3.1.0
   url_launcher: ^6.0.20
   intl: ^0.17.0
+  shared_preferences: ^2.0.13
   palette_generator: ^0.3.3
   shimmer: ^2.0.0
+  firebase_core: ^1.12.0
+  firebase_dynamic_links: ^4.0.6
 
 dev_dependencies:
   flutter_test:
