--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,4 +67,6 @@ flutter {
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.1.0')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.firebase:firebase-dynamic-links-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 }
