--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data
-                    android:host="appsonews-app.page.link"
+                    android:host="appsonewstest.page.link"
                     android:scheme="https" />
             </intent-filter>
         </activity>
