--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,13 +41,22 @@ dependencies:
   intl: ^0.17.0
   shared_preferences: ^2.0.13
   palette_generator: ^0.3.3
+  cached_network_image: ^3.2.0
   shimmer: ^2.0.0
   firebase_core: ^1.12.0
   firebase_dynamic_links: ^4.0.6
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.9.2
+  flutter_native_splash: ^2.0.5
+
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/launcher_icon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
